--- a/team.html
+++ b/team.html
@@ -183,14 +183,14 @@
         
         <div class="w3-col w3-container w3-third teamPlace">
           <div class="highlight-box w3-left">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Ciara Doherty"></div>
+            <div class="w3-center"><img class="teamImage" src="Images/Team/Ciara.jpg" alt="Ciara Doherty"></div>
             <h2 class="w3-center"><b>Ciara Doherty</b></h2>
             <h4 class="w3-center">Concept Artist</h4>
           </div>
           <div class="highlight-box2 w3-right">
             <p class="w3-center"><b>Role -</b> Ciara is our concept artist, she designs everything big and small. Her visions are what you see, explore, and interact with throughout.</p>
-            <p class="w3-center"><b>Why I Make Games -</b> ""</p>
-            <p class="w3-center"><b>Favourite Game -</b> </p>
+            <p class="w3-center"><b>Why I Make Games -</b> "Video games are an extraordinary way for an artists work to come alive. I want to show how the creativity and passion I have for gaming is reflected in my work."</p>
+            <p class="w3-center"><b>Favourite Game -</b> Baldur's Gate 3</p>
             <div style="display:flex; justify-content:center; align-items:center;">
               <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
                 <span class="teamFollow">Follow on:</span>
