--- a/team.html
+++ b/team.html
@@ -113,9 +113,7 @@
       </div>
     </div>
 
-    <div class="w3-hide-small row-gap"></div>
-
-    <div class="w3-row" style="padding-top:100px;">
+    <div class="w3-row">
       <div class="w3-col w3-container w3-third">
         <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Team/Tommy.jpg" alt="Tommy Doherty"></div>
