--- a/team.html
+++ b/team.html
@@ -190,7 +190,7 @@
             <p class="w3-center"><b>Why I Make Games -</b> "Video games are an extraordinary way for an artists work to come alive. I want to show how the creativity and passion I have for gaming is reflected in my work."</p>
             <p class="w3-center"><b>Favourite Game -</b> Baldur's Gate 3</p>
             <div style="display:flex; justify-content:center; align-items:center;">
-              <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
+              <a class="teamFollowLink" href="https://www.linkedin.com/in/ciara-doherty-832491231/" target="_blank">
                 <span class="teamFollow">Follow on:</span>
                 <img class="socialLink" src="Images/Software/LinkedInLogo.png" alt="LinkedIn logo">
               </a>
