--- a/team.html
+++ b/team.html
@@ -157,7 +157,7 @@
         </div>
       </div>
 
-       <div class="w3-hide-small row-gap"></div>
+       <div class="w3-hide-small row-gap" style="padding-top:200px;"></div>
       
       <div class="w3-row" style="padding-top:200px;">
         <div class="w3-col w3-container w3-third">
