--- a/team.html
+++ b/team.html
@@ -157,9 +157,9 @@
         </div>
       </div>
 
-       <div class="w3-hide-small row-gap" style="padding-top:200px;"></div>
+       <div class="w3-hide-small row-gap" style="padding-top:300px;"></div>
       
-      <div class="w3-row" style="padding-top:200px;">
+      <div class="w3-row">
         <div class="w3-col w3-container w3-third">
           <div class="highlight-box w3-left">
             <div class="w3-center"><img class="teamImage" src="Images/Team/Antony.jpg" alt="Antony Garbett"></div>
