--- a/team.html
+++ b/team.html
@@ -168,8 +168,8 @@
           </div>
           <div class="highlight-box2 w3-right">
             <p class="w3-center"><b>Role -</b> Antony is our character artist, he makes all of the people and creatures you meet and gives them life and personality.</p>
-            <p class="w3-center"><b>Why I Make Games -</b> ""</p>
-            <p class="w3-center"><b>Favourite Game -</b> </p>
+            <p class="w3-center"><b>Why I Make Games -</b> "I want to create characters that people identify with and feel deeply about. I want my art and visual storytelling to help inspire and instill that same sense of wonder that games have always given me."</p>
+            <p class="w3-center"><b>Favourite Game -</b> God of War 3</p>
             <div style="display:flex; justify-content:center; align-items:center;">
               <a class="teamFollowLink" href="https://uk.linkedin.com/in/antony-garbett-b24671279" target="_blank">
                 <span class="teamFollow">Follow on:</span>
