--- a/team.html
+++ b/team.html
@@ -175,6 +175,9 @@
                 <span class="teamFollow">Follow on:</span>
                 <img class="socialLink" src="Images/Software/LinkedInLogo.png" alt="LinkedIn logo">
               </a>
+              <a class="teamFollowLink" href="https://www.artstation.com/antonygarbett9" target="_blank">
+                <img class="socialLink" src="Images/Software/Artstation.svg" alt="Artstation Logo">
+              </a>
             </div>
           </div>
         </div>
