--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,9 @@
   <!-- Jquery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <!-- Font -->
+  <link rel="stylesheet" href="https://use.typekit.net/tvy5vdd.css">
+
 </head>
 
 <body>
