--- a/team.html
+++ b/team.html
@@ -24,6 +24,9 @@
   <!-- Adding the css style sheets -->
   <link href="style.css" rel="stylesheet" type="text/css">
 
+  <!-- Font -->
+  <link rel="stylesheet" href="https://use.typekit.net/tvy5vdd.css">
+
 </head>
 
 <body>
