--- a/team.html
+++ b/team.html
@@ -216,7 +216,7 @@
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Owen is our technical artist specialising in VFX. He adds the magic to the worlds and makes sure you feel each movement.</p>
-          <p class="w3-center"><b>Why I Make Games -</b> "I grew up playing games and I’ve always been a film and TV fanatic. Those stories shaped my life and made me want to be part of that world. The games industry offers greater creative freedom while still giving me the strong storytelling and narrative depth I love"</p>
+          <p class="w3-center"><b>Why I Make Games -</b> "I grew up playing games and I’ve always been a film and TV fanatic. Those stories shaped my life and made me want to be part of that world. Working in the games industry offers that creative freedom, strong storytelling and narrative depth that I love"</p>
           <p class="w3-center"><b>Favourite Game -</b> God of War Ragnarök</p>
           <div style="display:flex; justify-content:center; align-items:center;">
             <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
