--- a/team.html
+++ b/team.html
@@ -100,7 +100,7 @@
         <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Team/Mary.jpg" alt="Mary-Jane Law"></div>
           <h2 class="w3-center"><b>Mary-Jane Law</b></h2>
-          <h4 class="w3-center">Programmer, Designer</h4>
+          <h4 class="w3-center">Programmer, Game Designer</h4>
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Mary-Jane is a designer and programmer for Astral Forge, she creates the games as you know it. The world and feel of the game is due to her imagination and talent.</p>
@@ -146,7 +146,7 @@
          <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
           <h2 class="w3-center"><b>Joseph Jefferies</b></h2>
-          <h4 class="w3-center">Animator, Designer</h4>
+          <h4 class="w3-center">Animator, Technical Designer</h4>
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Joe is our technical animator in Astral Forge. He works on the interactions and movement for our characters and makes the world feel alive.</p>
