--- a/team.html
+++ b/team.html
@@ -212,7 +212,7 @@
         <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Owen Stocking"></div>
           <h2 class="w3-center"><b>Owen Stocking</b></h2>
-          <h4 class="w3-center">VFX Artist</h4>
+          <h4 class="w3-center">VFX Artist, Technical Artist</h4>
         </div>
         <div class="highlight-box2 w3-right">
           <p class="w3-center"><b>Role -</b> Owen is our technical artist specialising in VFX. He adds the magic to the worlds and makes sure you feel each movement.</p>
