--- a/team.html
+++ b/team.html
@@ -219,7 +219,7 @@
           <p class="w3-center"><b>Why I Make Games -</b> "I grew up playing games and I’ve always been a film and TV fanatic. Those stories shaped my life and made me want to be part of that world. Working in the games industry offers that creative freedom, strong storytelling and narrative depth that I love"</p>
           <p class="w3-center"><b>Favourite Game -</b> God of War Ragnarök</p>
           <div style="display:flex; justify-content:center; align-items:center;">
-            <a class="teamFollowLink" href="https://www.linkedin.com/in/josephj2004/" target="_blank">
+            <a class="teamFollowLink" href="https://www.linkedin.com/in/owen-stocking-8217531b8/" target="_blank">
               <span class="teamFollow">Follow on:</span>
               <img class="socialLink" src="Images/Software/LinkedInLogo.png" alt="LinkedIn logo">
             </a>
